fix: fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,11 +4,11 @@
 
 @layer base {
   * {
-    @apply select-none outline-none overflow-hidden scrollbar-thin scrollbar-thumb-neutral-500 scrollbar-track-neutral-900 hover:scrollbar-thumb-neutral-400 scrollbar-thumb-rounded;
+    @apply select-none outline-none overflow-x-hidden scrollbar-thin scrollbar-thumb-neutral-500 scrollbar-track-neutral-900 hover:scrollbar-thumb-neutral-400 scrollbar-thumb-rounded;
   }
 
   html {
-    @apply overflow-hidden antialiased bg-bg text-white overscroll-none leading-7;
+    @apply overflow-x-hidden antialiased bg-bg text-white overscroll-none leading-7;
   }
 
   [type="text"],
